--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/jest": "^25.1.3",
     "@types/lodash": "4.14.149",
     "@types/marked": "^1.1.0",
+    "@types/mkdirp": "^1.0.2",
     "@types/moment-shortformat": "2.1.1",
     "@types/moment-timezone": "0.5.13",
     "@types/mongoose": "5.7.8",
@@ -68,6 +69,7 @@
     "css-loader": "3.5.2",
     "d3": "5.15.1",
     "debug": "4.1.1",
+    "execa": "^5.1.1",
     "express": "4.17.1",
     "express-history-api-fallback": "2.2.1",
     "express-session": "1.17.0",
@@ -89,6 +91,7 @@
     "material-table": "1.57.2",
     "material-ui": "0.20.2",
     "mini-css-extract-plugin": "0.9.0",
+    "mkdirp": "^1.0.4",
     "moment": "2.24.0",
     "moment-shortformat": "2.1.0",
     "moment-timezone": "0.5.28",
