Add failOnStdErr:true param to help duplicacy fail easier Add stream logging on manager Remove 2&>1 | tee from code where it would not work anyway since it is not in bash Add .stdMix to easier see timestamp/ std TYPE and command executed Fix sending summary reports for varify and copy Add parser for copy command which counts chunks, and supports "no need to copy" Add sourcemaps SCP all dist in one command Show diff in days for checkDates command Add more timstamps all over the place Chnage format of the error emitted by RunViaSSH to include extra fields on Error object Move more types to types.ts Refactor statusToSmallStatus.ts

--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "sequelize": "5.21.13",
     "serve": "11.3.0",
     "server-timing": "3.2.1",
+    "source-map-support": "^0.5.20",
     "ssh2": "^0.8.9",
     "style-loader": "1.1.4",
     "terser-webpack-plugin": "2.3.5",
